fixing alignment

--- a/src/styles/SpecialitiesCards.css
+++ b/src/styles/SpecialitiesCards.css
@@ -36,17 +36,21 @@ background-color: #C90006;
 display: block;
 margin-left: auto;
 margin-right: auto;
+margin-top: 30px;
 }
 
 .pizza {
+margin-top: 30px;
 background-color:#FB0000;
 }
 
 .usa {
+margin-top: 30px;
 background-color:#FD6B00;
 }
 
 .taco{
+margin-top: 30px;
 background-color:#FFB100;
 }
 
